--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ We believe it’s more than a home. It’s your life.
                     
                     <div class="col-md-4 col-sm-12">
                         <a href="#">
-                <img class="house" src="images/house2.jpg" alt="prime real estate">
+                <img class="house" src="images/house2b.jpg" alt="prime real estate">
                             </a>
                         <p><b>7687 WIGGINS ST.</b>
                         <br>$962,000</p>
